# metamer-sao

./: .gitignore  .gitmodules  LICENSE  README.md
generators/: README.md  generate_default_values.py  leds.yaml  leds_v2.yaml  metamerbadge.py  pyproject.toml
kicad/: MetamerBoard-altium-import.bak  MetamerBoard-altium-import.kicad_sym  MetamerBoard.kicad_dru  MetamerBoard.kicad_pcb  MetamerBoard.kicad_prl  MetamerBoard.kicad_pro  MetamerBoard.kicad_sch  MetamerBoard.round-tracks-config  MfgOutjob.kicad_jobset  fp-info-cache  fp-lib-table  sym-lib-table
kicad/MetamerAltiumFootprints.pretty/: 6_Pin_POGO.kicad_mod  LED_SMD3012.kicad_mod
kicad/OUTPUTS/ASSY/: MetamerBoard-bottom-pos.csv  MetamerBoard-bottom.pos  MetamerBoard-top-pos.csv  MetamerBoard-top.pos
kicad/OUTPUTS/DOCS/: .step
kicad/OUTPUTS/FAB/: MetamerBoard-B_Adhesive.gba  MetamerBoard-B_Courtyard.gbr  MetamerBoard-Bottom Layer.gbl  MetamerBoard-Bottom Overlay.gbo  MetamerBoard-Bottom Paste.gbp  MetamerBoard-Bottom Solder.gbs  MetamerBoard-Edge_Cuts.gm1  MetamerBoard-F_Adhesive.gta  MetamerBoard-F_Courtyard.gbr  (+6 more)
kicad/bom/: ibom.html
kicad/graphics/: boardout.dxf  cie.dxf
kicad/jlcpcb/: project.db
micropython/: blind_em.py  board_functionality_check.py  open_short_check.py
py32/: .clang-format  .gitignore  Makefile  README.md
py32/src/: main.c  main.h  py32f002b_hal_conf.h  py32f002b_hal_msp.c  py32f002b_it.c  py32f002b_it.h
python_graphs/: .$FlowDiagram.drawio.bkp  FlowDiagram.drawio  apple_plots.py  cie1931.py  default_style.py  eye_plots.py  fruit_dataset.py  more_illuminants.py
(+21 files in other folders)
