[tool.poetry]
name = "metamer-badge-generators"
version = "0.1.0"
description = ""
authors = ["eosti <reidsox1@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
strictyaml = "^1.7.3"
path = "^16.14.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
